Bug 409638 - Inline note with pen opens new notes while hovering
Summary: Inline note with pen opens new notes while hovering
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.3.3
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-07-09 01:37 UTC by ffuhrmann1
Modified: 2019-12-01 10:44 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ffuhrmann1 2019-07-09 01:37:48 UTC
SUMMARY


STEPS TO REPRODUCE
1. Thinkpad Pen Pro used on Lenovo Thinkpad L390 Yoga.
2. Try to make an Inline-Note by using this Pen.
3. Hover for a few seconds with the pen over the screen (while having the review option "inline-note" selected).

OBSERVED RESULT
An extreme amount of new windows to make a new inline text note is opened (800+ in my case). While being with the pen in proximity to the screen, the responsiveness was really slow (probably because of the new notes popping up). This occurred only when using the Pen. While using the Trackpad or Finger on the Touchscreen the software reacted as expected.

EXPECTED RESULT
Just one new popup windows for the input of a text for the inline-note.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Ubuntu 18.04, gnome 3.28.2
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Oliver Sander 2019-07-09 11:20:33 UTC
Indeed.  I can confirm this with the current git master.  Offhand I am a little surprised, because there is not much code in Okular that distinguishes between a pen/stylus and a mouse.
Comment 2 Oliver Sander 2019-07-14 08:28:09 UTC
Could this be related to what Tobias describes in 

  https://phabricator.kde.org/D15347

?
Comment 3 Tobias Deiminger 2019-07-15 20:18:31 UTC
(In reply to Oliver Sander from comment #1)
> Indeed.  I can confirm this with the current git master.

Oliver, could you give https://invent.kde.org/kde/okular/merge_requests/13 a try with real pen/stylus hardware?
Comment 4 Oliver Sander 2019-07-16 03:59:42 UTC
I tried, and it seems that your patch fixes the problem.
Comment 5 Nate Graham 2019-11-12 21:36:42 UTC
*** Bug 413990 has been marked as a duplicate of this bug. ***
Comment 6 Rafael Brandmaier 2019-11-13 10:33:26 UTC
Just FYI ffuhmann1 has the exact same laptop as me, if that helps clear up the situation.
Comment 7 Tobias Deiminger 2019-12-01 10:44:56 UTC
Git commit 00640370d3b138ef247b5a67a4fc019b968a3cf3 by Tobias Deiminger.
Committed on 01/12/2019 at 10:00.
Pushed by tobiasdeiminger into branch 'release/19.12'.

Fix spurious dialogs in PickPointEngine

In the case of multiple input events, the local event loop of
QInputDialog was processing pending events before m_creationCompleted
could be cleared. This allowed recursive calls to PickPointEngine::end,
even on wrong events (e.g. MouseMove shouldn't cause end(), but it did).
Related: bug 413990

M  +7    -0    ui/pageviewannotator.cpp

https://invent.kde.org/kde/okular/commit/00640370d3b138ef247b5a67a4fc019b968a3cf3