Fix spurious dialogs in PickPointEngine

In the case of multiple input events, the local event loop of
QInputDialog was processing pending events before m_creationCompleted
could be cleared. This allowed recursive calls to PickPointEngine::end,
even on wrong events (e.g. MouseMove shouldn't cause end(), but it did).

BUG: 409638
BUG: 413990